--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@1,200&display=swap');
 $color-melon: #f1d5bb;
 $color-marron: #3B2213;
 $color-blanco: #ffffff;
@@ -19,10 +20,15 @@ $color-verde:#008080;
   flex-wrap: wrap;
   gap: 1rem;
   margin: 0 auto;
+  font-family: 'Mulish', sans-serif;
 }
 .titulo{
-  padding: 1rem;
+  color: black;
+  margin: 2rem 0 1rem 1rem;
   align-self: flex-start;
+  font-size: 35px;
+  border-bottom: 5px solid $color-melon;
+  padding: 5px;
 }
 .btnNuevoUsuario{
   align-self: flex-start;
@@ -30,7 +36,7 @@ $color-verde:#008080;
   margin: 0 1rem;
   display: inline-flex;
   margin: 0 1rem;
-  background-color: $color-primary;
+  background-color: $color-marron;
   color: $color-blanco;
   border: none;
   border-radius: 5px;
@@ -47,9 +53,7 @@ $color-verde:#008080;
   gap: 1rem;
   padding: 1rem;
 }
-.listarUsuario>.subtitulo{
-  align-self: flex-start;
-}
+
 .modal-contenido{
   display: flex;
   flex-direction: column;
@@ -66,6 +70,7 @@ $color-verde:#008080;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  color: $color-marron;
 }
 
 .rol>label,.estado>label{
@@ -80,7 +85,7 @@ $color-verde:#008080;
   
 }
 .column1>label, .column2>label{
-  color: teal;
+  color: $color-marron;
   font-size: 0.8rem;
   font-weight: 600;
 }
@@ -92,7 +97,7 @@ input{
 .btnCreate{
   display: block;
   text-align: center;
-  background-color: $color-verde;
+  background-color: $color-marron;
   color: $color-blanco;
   border: none;
   border-radius: 5px;
@@ -101,7 +106,6 @@ input{
   box-shadow: 3px 3px 3px gray;
   padding: 0.5rem;
   margin-top: 0.5rem;
-  
 }
 
 // modal
@@ -127,8 +131,8 @@ input{
 }
 .header-container, .contenido{
   padding:1rem;
-  color:$color-blanco;
-  background-color: teal;
+  color:$color-marron;
+  background-color: $color-melon;
   font-weight: 600;
 }
 .btn{
@@ -143,7 +147,7 @@ input{
   text-align:center;
   cursor:pointer;
   white-space:nowrap;
-  color: $color-blanco;
+  color: $color-marron;
 }
 .btn:hover{
   color: #000;
@@ -167,11 +171,11 @@ input{
 thead{
   border:1px solid $color-gris-ligth;
   font-weight: 700;
-  background-color: $color-verde;
+  background-color: $color-melon;
 }
 th{
   padding: 1rem;
-  color: $color-blanco;
+  color: black;
 }
 td {
   padding: 0.4rem;
@@ -205,6 +209,17 @@ tr:hover {
 .fa-trash-can:hover{
   background-color: $color-danger;
   color: $color-blanco;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { 
+  -moz-appearance:textfield;
+  width: 15rem; 
+  border: 1px solid $color-melon;
 }
 @media only screen and (min-width: 700px) and (max-width: 1500px) {
   .table{
