--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.scss
@@ -151,3 +151,48 @@ $color-blanco: #ffffff;
     font-size: 13px;
   }
 }
+
+@media (max-width: 700px) {
+  #cartaOpcionesView{
+    display: flex;
+    flex-direction: column-reverse;
+
+    .containerOptionsLetter{
+      flex-direction: column;
+      margin-right: auto;
+      margin-left: auto;
+      margin-bottom: 0%;
+      height: auto;
+    } 
+  }
+
+  .divOptions{
+    flex-direction: column;
+
+    .imgHamburger{
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  .containerOptions{
+    justify-content: center;
+    height: auto;
+  }
+
+  .selects{
+    width: 104%;
+
+    div{
+      margin-bottom: 0.5em;
+    }
+
+    select{
+      width: 116px;
+    }
+  }
+
+  .containerSubTotal{
+    width: 100%;
+  }
+}  
