componente total lista pedidos

--- a/burgerQueen/src/app/ingreso/login/login.component.scss
+++ b/burgerQueen/src/app/ingreso/login/login.component.scss
@@ -58,13 +58,11 @@ h2{
   border: none;
   border-radius: 0.5rem;
   width: 15rem;
-  height: 2rem;$color-melon: #f1d5bb;
-$color-marron: #3C2213;
-$color-blanco: #fff;
+  height: 2rem;
   font-weight: 700;
   mix-blend-mode: darken;
   box-shadow: 3px 3px 3px gray;
-  color: $color-melon;
+  color: $color-blanco;
   background-color: $color-marron;
   padding: 0.5rem;
 }
