estilos gestion de proyectos

--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -61,8 +61,10 @@
             <div [class]="['column2']">
               <label for="">Estado</label>
               <div class="estado">
-                <label><input type="radio" name="estado" value="Activo" formControlName="estado">Activo</label>
-                <label><input type="radio" name="estado" value="Inactivo" formControlName="estado">Inactivo</label>
+                <label><input type="radio" name="estado" value="Activo" formControlName="estado">
+                Activo</label>
+                <label><input type="radio" name="estado" value="Inactivo" formControlName="estado">
+                  Inactivo</label>
               </div>
               <Label for="">Rol</Label>
               <div [class]="['rol']">
