--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -2,25 +2,25 @@
 <div class="navbar" style="display:none">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
     <i class="fa-solid fa-user-large"></i>
-    <i class="fa-solid fa-utensils" routerLink="/pedidosMesero" routerLinkActive="active"></i>
-    <i class="fa-solid fa-receipt"></i>
-    <i class="fa-solid fa-clipboard-list"></i>
-    <i class="fa-solid fa-right-from-bracket"></i>
+    <i class="fa-solid fa-utensils" routerLink="" routerLinkActive="active"></i>
+    <i class="fa-solid fa-receipt" routerLink="" routerLinkActive="active"></i>
+    <i class="fa-solid fa-clipboard-list" routerLink="" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
 </div>
 
 <!--Navbar Mesero-->
 <div class="navbar" style="display:flex">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
-    <i class="fa-solid fa-utensils" routerLink="/pedidosMesero" routerLinkActive="active"></i>
-    <i class="fa-solid fa-receipt"></i>
-    <i class="fa-solid fa-clipboard-list"></i>
-    <i class="fa-solid fa-right-from-bracket"></i>
+    <i class="fa-solid fa-utensils" routerLink="/totalPedidosMesero" routerLinkActive="active"></i>
+    <i class="fa-solid fa-receipt" routerLink="/carta" routerLinkActive="active"></i>>
+    <i class="fa-solid fa-clipboard-list" routerLink="/pedidosMesero" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
 </div>
 
 <!--Navbar Cocinero-->
 <div class="navbar" style="display:none">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
-    <i class="fa-solid fa-receipt"></i>
-    <i class="fa-solid fa-clipboard-list"></i>
-    <i class="fa-solid fa-right-from-bracket"></i>
+    <i class="fa-solid fa-receipt" routerLink="" routerLinkActive="active"></i>
+    <i class="fa-solid fa-clipboard-list" routerLink="" routerLinkActive="active"></i>
+    <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
 </div>
