--- a/burgerQueen/src/app/shared/navegador/navegador.component.scss
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.scss
@@ -12,7 +12,8 @@ $color-rosa: #FF8087;
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-
+    cursor: pointer;
+    
     img{
         width: 50px;
         margin: 0px auto;
