--- a/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.scss
+++ b/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.scss
@@ -1,77 +1,62 @@
 $color-melon: #f1d5bb;
 $color-marron: #3B2213;
-$color-blanco: #ffffff;
-$color-pink: #FF8087;
-$color-grisligth:#6c757d;
-$color-gris:#303438;
-$color-danger:#dc3545;
+$color-rosa: #FF8087;
+// $color-grisligth:#6c757d;
+// $color-gris:#303438;
 
 .datosPedido{
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-.fecha{
-  background-color: $color-marron;
-  color: $color-melon;
-  padding: 0.5rem; 
-  margin: 0.5rem 0;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  text-align: center;
-  font-weight: 400;
-  width: 18rem;
-}
-.seccionCliente, .seccionMesa{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem 2rem;
-  border: 1px solid $color-melon;
-  border-radius: 5px;
-  width: 18rem;
+  width: 33vw;
+  margin: 1em;
+  // gap: 1rem;
 }
 
-.lblCliente, .lblMesa{
-  color:$color-pink;
-  margin-right: 1rem;
-  font-weight: 600;
-  width: 5rem;
-  text-align: left;
-}
-.cliente, .mesa{
-  background-color: $color-blanco;
-  padding: 0.5rem;
-  border: 1px solid #eee;
-  border-radius: 5px;
-}
-.cliente{
-  width: 10rem;
-}
-.mesa{
-  width: 14rem;
+.datos{
+  border: 1px solid $color-melon;
+  justify-content: center;
+
+  .fecha{
+    padding: 0.5rem; 
+    margin: 1rem 0;
+    width: 100%;
+    text-align: center;
+    font-family: 'Tajawal', sans-serif;
+  }
+  
+  .seccionCliente, .seccionMesa{
+    display: flex;
+    margin: 1em;
+    align-items: center;
+    justify-content: space-between;
+  
+    p{
+      font-family: 'Tajawal', sans-serif;
+    }
+  }
+  
+  .cliente, .mesa{
+    padding: 0.5rem;
+    width: 10rem;
+    border: 1px solid $color-melon;
+    border-radius: 5px;
+  }
 }
 
 .costoPedido{
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem;
-  font-weight: 700;
-}
-.costoPedido>h3{
-  color:$color-pink;
-}
-.btnEnviarOrden{
-  background-color: $color-marron;
-  color: $color-blanco;
-  border: none;
-  border-radius: 5px;
-  font-weight: 500;
-  mix-blend-mode: darken;
-  box-shadow: 3px 3px 2px $color-grisligth;
-  padding: 0.75rem;
-}
-.btnEnviarOrden:hover{
+  padding: 1rem;
+  flex-direction: column;
+  margin: 1rem 0;
   background-color: $color-melon;
-  color: $color-marron;
+  
+  p{
+    font-family: 'Tajawal', sans-serif;
+    font-size: 18px;
+  }
+
+  .precio{
+    align-self: center;
+  }
 }
