Corrección en botones

--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -44,9 +44,10 @@
       -->
     </div>
 
-    <app-datos-pedido></app-datos-pedido>
-    
-    <button class="btnEnviarOrden">Enviar Orden</button>
+    <div class="datos">
+      <app-datos-pedido></app-datos-pedido>
+      <button class="btnEnviarOrden">Enviar Orden</button>
+    </div>
 
   </main>
 
