--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
@@ -103,15 +103,19 @@ img{
   flex-direction: column;
 }
 
-.btnEnviarOrden{
-  background-color: $color-marron;
-  color: whitesmoke;
-  border: none;
-  font-weight: 500;
-  mix-blend-mode: darken;
-  // box-shadow: 3px 3px 2px $color-grisligth;
-  padding: 0.75rem;
-}
-.btnEnviarOrden:hover{
-  background-color: $color-rosa;
+.datos{
+  display: flex;
+  flex-direction: column;
+
+  .btnEnviarOrden{
+    background-color: $color-marron;
+    color: whitesmoke;
+    padding: 0.75rem;
+    border: none;
+    margin: 0em 1em;
+    font-size: 18px;
+    width: 33vw;
+    // mix-blend-mode: darken;
+    // box-shadow: 3px 3px 2px $color-grisligth;
+  }
 }
