Cambiando estilo botón de PedidosMesero

--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.scss
@@ -112,9 +112,10 @@ img{
     color: whitesmoke;
     padding: 0.75rem;
     border: none;
-    margin: 0em 1em;
-    font-size: 18px;
-    width: 33vw;
+    margin: 0em auto;
+    font-size: 13px;
+    width: 11.5em;
+    height: 40px;
     // mix-blend-mode: darken;
     // box-shadow: 3px 3px 2px $color-grisligth;
   }
