dando estilos responsive total pedidos

--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.html
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.html
@@ -1,5 +1,5 @@
 <div class="total-pedidos">
-  <h3 ngClass="'titulo-lista-pedidos'">LISTA DE PEDIDOS</h3>
+  <h3 class="titulo-lista-pedidos">LISTA DE PEDIDOS</h3>
   <hr class="subrayado">
   <table>
     <thead>
