Pequeñas correcciones de idioma - Intentando pasar nombre de cliente entre componentes

--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -76,9 +76,9 @@
                 Mesero</label> 
               </div>
               <label for="">Email</label>
-              <input type="email" id="" formControlName="correo" placeholder="paquita@gmail.com">
+              <input type="email" id="" formControlName="correo" placeholder="email.ejemplo@gmail.com">
               <label for="">Password</label>
-              <input type="password" id="" formControlName="password" placeholder=" betinaB06$">
+              <input type="password" id="" formControlName="password" placeholder="*********">
               <button type="submit" [class]="['btnCreate']"> <i class="fas fa-database"></i> &nbsp;Aceptar</button>
             </div>
           </div>
