--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -12,7 +12,7 @@
 <div class="navbar" style="display:flex">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
     <i class="fa-solid fa-utensils" routerLink="/totalPedidosMesero" routerLinkActive="active"></i>
-    <i class="fa-solid fa-receipt" routerLink="/carta" routerLinkActive="active"></i>>
+    <i class="fa-solid fa-receipt" routerLink="/carta" routerLinkActive="active"></i>
     <i class="fa-solid fa-clipboard-list" routerLink="/pedidosMesero" routerLinkActive="active"></i>
     <i class="fa-solid fa-right-from-bracket" routerLink="/welcome" routerLinkActive="active"></i>
 </div>
