--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -6,10 +6,10 @@
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
       <!--input type="password" placeholder="password" id="passLogin" class="passLogin" 
       [(ngModel)]="usuario.password"-->
-      <input type="password" placeholder="password" id="passLogin" class="passLogin" >
+      <input type="password" placeholder="Contraseña" id="passLogin" class="passLogin" >
     
     </div>
-    <a [class]="'forgetPassword'">Olvide mi password</a>
+    <a [class]="'forgetPassword'">Olvide mi contraseña</a>
     <!--input type="submit" [class]="['buttonLogin']" routerLink="/view/principal" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()"-->
     <input type="submit" class="buttonLogin" routerLink="/carta">
   </div>
