--- a/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
+++ b/burgerQueen/src/app/shared/total-pedidos/total-pedidos.component.scss
@@ -14,6 +14,7 @@ $color-primary: #64b6e6;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
 }
 .titulo-lista-pedidos{
   font-family: 'Mulish', sans-serif;
