Usando data de Firestore - Imágenes y carta

--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -14,7 +14,7 @@
         <p class="hamburgerTitle">{{ titleHamburger }}</p>
         <div class="divOptions">
 
-          <img src="../../../assets/imagenes/img-carta/{{ imgHamburger }}" alt="Hamburguesa" class="imgHamburger">
+          <img src="{{ imgHamburger }}" alt="Hamburguesa" class="imgHamburger">
 
           <div class="selects">
             <div>
