--- a/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
+++ b/burgerQueen/src/app/mesero/pedidos-mesero/pedidos-mesero.component.html
@@ -14,7 +14,7 @@
       <table class="listaPedidos">
         <tr>
           <td><button (click)="eliminar()">x</button></td>
-          <td><img src="../../../assets/imagenes/img-carta/{{img}}"></td>
+          <td><img src="{{img}}"></td>
           <td>
             <div class="p">
               <p>{{ title }}</p>
